--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,42 @@
-<p>
-  progress works!
-</p>
+
+<div class="row">
+  <div class="col-12">
+      <div class="card">
+          <div class="card-body">
+            <h4 class="card-tittle">Barra de progrreso</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]=50 aria-valuemin="0" aria-valuemax="100" [style.width]="50 + '%'"></div>
+            </div>
+            <br>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" [attr.ariaValuenow]=50 aria-valuemin="0" aria-valuemax="100" [style.width]="50 + '%'"></div>
+            </div>
+
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+      <div class="card">
+          <div class="card-body">
+
+            <app-incrementador leyenda="progress Azul" [porcentaje]=0 ></app-incrementador>
+
+          </div>
+      </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+
+          <app-incrementador leyenda="progress amarillo" [porcentaje]=0 ></app-incrementador>
+
+        </div>
+    </div>
+  </div>
+
+</div>
+
