--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -1,5 +1,5 @@
 <h3>
-    {{ leyenda }}
+    {{ leyenda }} - {{ porcentaje }}
 </h3>
 
 <div class="input-group">
@@ -9,7 +9,7 @@
       </button>
     </span>
 
-    <input type="text" class="form-control" name="porcentaje" [(ngModel)] = "porcentaje">
+    <input  #txtProgress type="number" class="form-control" name="porcentaje" [(ngModel)] = "porcentaje" (ngModelChange)="onChanges( $event )" min="1" max="100">
 
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
