--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,24 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+  <div class="col-6">
+      <div class="card">
+          <div class="card-body">
+            <div>
+              <div>
+                <app-grafico-dona></app-grafico-dona>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          <div>
+            <div>
+              <app-grafico-dona></app-grafico-dona>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
+</div>
