--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -1,19 +1,19 @@
 <h3>
-    {{ leyenda }} - {{ porcentaje }}
+    {{ leyenda }} - {{ progreso }}
 </h3>
 
 <div class="input-group">
     <span class="input-group-btn">
-      <button class="btn btn-primary" type="button" (click)="cambiarValor(-5)">
+    <button class="btn btn-primary" type="button" (click)="cambiarValor(-5)">
         <i class="mdi mdi-minus"></i>
-      </button>
-    </span>
+    </button>
+  </span>
 
-    <input  #txtProgress type="number" class="form-control" name="porcentaje" [(ngModel)] = "porcentaje" (ngModelChange)="onChanges( $event )" min="1" max="100">
+    <input #txtProgress type="number" class="form-control" name="progreso" [(ngModel)]="progreso" (ngModelChange)="onChanges($event)" min="1" max="100">
 
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
-        <i class="mdi mdi-plus"></i>
+          <i class="mdi mdi-plus"></i>
       </button>
     </span>
 </div>
